--- a/style/styles.css
+++ b/style/styles.css
@@ -1,3 +1,77 @@
-h1{
-    color: red;
+body{
+    margin: 0;
+    min-height: 100vh;
+}
+.navbar{
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+}
+.nav-container{
+    display: flex;
+    align-items: center;
+    padding: 1rem;
+}
+.nav-left{
+    display: flex;
+    align-items: center;
+}
+.logo{
+    border-radius: 50%;
+    margin: 0 1rem;
+}
+.nav-name{
+    font-size: 20px;
+    line-height: 1.5rem;
+    letter-spacing: 0.2rem;
+}
+.nav-right{
+    margin-left: auto;
+}
+.nav-items-container{
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: auto;
+}
+.nav-items{
+    margin: 1rem;
+    list-style-type: none;
+
+}
+.nav-items-link{
+    text-decoration: none;
+}
+.nav-items-link:hover{
+    color: cadetblue;
+}
+.container{
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+@media (min-width: 576px){
+    .container{
+        max-width: 540px;
+    }
+}
+@media (min-width: 768px){
+    .container{
+        max-width: 720px;
+    }
+}
+@media (min-width: 992px){
+    .container{
+        max-width: 960px;
+    }
+}
+@media (min-width: 1200px){
+    .container{
+        max-width: 1140px;
+    }
+}
+@media (min-width: 1400px){
+    .container{
+        max-width: 1320px;
+    }
 }
