add profile section

--- a/style/styles.css
+++ b/style/styles.css
@@ -1,77 +1,135 @@
-body{
+body {
     margin: 0;
     min-height: 100vh;
 }
-.navbar{
+
+.navbar {
     position: sticky;
     top: 0;
     z-index: 1000;
 }
-.nav-container{
+
+.nav-container {
     display: flex;
     align-items: center;
     padding: 1rem;
 }
-.nav-left{
+
+.nav-left {
     display: flex;
     align-items: center;
 }
-.logo{
+
+.logo {
     border-radius: 50%;
     margin: 0 1rem;
 }
-.nav-name{
+
+.nav-name {
     font-size: 20px;
     line-height: 1.5rem;
     letter-spacing: 0.2rem;
 }
-.nav-right{
+
+.nav-right {
     margin-left: auto;
 }
-.nav-items-container{
+
+.nav-items-container {
     display: flex;
     flex-wrap: wrap;
     margin-left: auto;
 }
-.nav-items{
+
+.nav-items {
     margin: 1rem;
     list-style-type: none;
 
 }
-.nav-items-link{
+
+.nav-items-link {
     text-decoration: none;
 }
-.nav-items-link:hover{
+
+.nav-items-link:hover {
     color: cadetblue;
 }
-.container{
+
+.container {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
 }
 
-@media (min-width: 576px){
-    .container{
+.hero-container {
+    display: flex;
+    /* flex-wrap: wrap; */
+    align-items: center;
+    justify-content: space-between;
+    height: 100vh;
+}
+
+.hero-image {
+    max-width: 100%;
+    height: auto;
+    margin: 0 auto;
+    display: block;
+}
+
+.hero-left,
+.hero-right {
+    width: 100%;
+}
+.title{
+    font: 3rem;
+    text-align: center;
+    font-weight: 400;
+}
+.hero-container .title{
+    text-align: left;
+    padding-left: 1rem;
+}
+.description{
+    padding: 0 1rem;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    text-align: justify;
+}
+
+@media (min-width: 576px) {
+    .container {
         max-width: 540px;
     }
 }
-@media (min-width: 768px){
-    .container{
+
+@media (min-width: 768px) {
+    .container {
         max-width: 720px;
     }
 }
-@media (min-width: 992px){
-    .container{
+
+@media (min-width: 992px) {
+    .container {
         max-width: 960px;
     }
+
+    .hero-left {
+        width: 40%;
+    }
+
+    .hero-right {
+        width: 60%;
+    }
 }
-@media (min-width: 1200px){
-    .container{
+
+@media (min-width: 1200px) {
+    .container {
         max-width: 1140px;
     }
 }
-@media (min-width: 1400px){
-    .container{
+
+@media (min-width: 1400px) {
+    .container {
         max-width: 1320px;
     }
 }
